# exit-dash-hyperion

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  1  AGENTS.md  CLAUDE.md  CREDITS.md  LICENSE  MainGame.py  README.md  RunGame.py  __init__.py  aicharacter.py  backgroundfoliage.py  block.py  character.py  door.py  game.py  key.py  platform.py  playablecharacter.py  pool.py  pyproject.toml  settings.cfg  spike.py
.github/workflows/: ci.yml
data/: __init__.py  aicharacter.py  background.py  backgroundfoliage.py  block.py  character.py  checkpoint.py  checkpointManager.py  door.py  game.py  key.py  keymap.py  platform.py  playablecharacter.py  pool.py  spike.py  torch.py
environment/main/: tiles_spritesheet.xml
hud/: hud_spritesheet.xml
items/: items_spritesheet.xml
scripts/: asset_manifest.py
src/exit_dash/: __init__.py  __main__.py
src/exit_dash/assets/character/main/: license.txt
src/exit_dash/assets/character/main/p1_walk/: p1_walk.json
src/exit_dash/assets/character/main/p2_walk/: p2_walk.json
src/exit_dash/assets/character/main/p3_walk/: p3_walk.json
src/exit_dash/assets/environment/main/: tiles_spritesheet.xml
src/exit_dash/assets/environment/unused/: license.txt
src/exit_dash/assets/hud/: hud_spritesheet.xml
src/exit_dash/assets/items/: items_spritesheet.xml
src/exit_dash/assets/ui/: license.txt
src/exit_dash/core/: __init__.py  app.py  constants.py  input.py  keybindings.py  paths.py  resources.py  scene.py  settings.py
src/exit_dash/entities/: __init__.py  background.py  block.py  character.py  checkpoint.py  door.py  enemy.py  foliage.py  key.py  platform.py  player.py  pool.py  spike.py  torch.py
src/exit_dash/scenes/: __init__.py  editor.py  gameover.py  level.py  options.py  title.py
src/exit_dash/ui/: __init__.py  widgets.py
src/exit_dash/world/: __init__.py  editing.py  hints.py  level.py  loader.py  world.py
tests/: conftest.py  test_assets.py  test_audio.py  test_editor.py  test_entities.py  test_hints.py  test_level_scene.py  test_levels.py  test_options_scene.py  test_physics.py  test_scenes.py  test_settings.py  test_smoke.py  test_widgets.py  test_world.py
