[project]
name = "exit-dash-hyperion"
version = "2.0.0"
description = "Exit Dash: Hyperion — a 2D platformer, modernized for Python 3 and pygame-ce."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Kenneth Sinder" }]
keywords = ["game", "platformer", "pygame", "pygame-ce"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Games/Entertainment :: Arcade",
]
dependencies = [
    "pygame-ce>=2.5.7",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pytest-cov",
    "mypy>=1.11",
    "pre-commit",
]

[project.scripts]
exit-dash-hyperion = "exit_dash.__main__:main"

[project.urls]
Homepage = "https://github.com/burincode/exit-dash-hyperion"
Repository = "https://github.com/burincode/exit-dash-hyperion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exit_dash"]

[tool.hatch.build.targets.sdist]
include = ["src/exit_dash", "README.md", "LICENSE", "CREDITS.md"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
# The legacy `data/` package and `RunGame.py` are the Python-2 behavioral reference kept
# only until `src/exit_dash` reaches parity; they are exempt from lint/format.
extend-exclude = ["data", "RunGame.py"]
# Honour the exclude even when pre-commit passes file paths explicitly.
force-exclude = true

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff-specific
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
]
ignore = [
    "E501",  # line length handled by the formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
# pygame-ce ships partial type information; don't fail on its internals.
ignore_missing_imports = true
